--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react-dom": "^18.0.10",
     "bootstrap": "4.5.3",
     "bootstrap-icons": "^1.10.3",
+    "dotenv": "^16.0.3",
     "firebase": "^8.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-push-notification": "^1.3.0",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
