--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-localization": "^1.0.19",
     "react-push-notification": "^1.3.0",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.4.2",
